--- a/estilosPrincipales.css
+++ b/estilosPrincipales.css
@@ -4,6 +4,7 @@
     --color-gris:#F5F5F5;
     --color-azul:#2A7AE4;
     --color-fondo-footer:#EAF2FD;
+    --color-texto-campo:#A2A2A2;
 }
 
 body{
