--- a/estilos/cabecera.css
+++ b/estilos/cabecera.css
@@ -66,7 +66,7 @@
 /* Banner*/
 
 .banner{
-    background: url(/imagenes/banner-imagen.png);
+    background: url(../imagenes/banner-imagen.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
