--- a/paginas/admin/agregarProductos/estilosAgregarProductos.css
+++ b/paginas/admin/agregarProductos/estilosAgregarProductos.css
@@ -77,6 +77,12 @@ main{
     width: 100%;
 }
 
+.botonAgregar:hover{
+    transform: scale(1.02);
+    cursor:pointer;
+}
+
+
 @media screen and (min-width:0px) and (max-width:755px){
     
     .encabezado__boton{
